fixing alignment

--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@ body{
     margin: 20px;
     border: 5px solid #FFFF00;
     border-radius: 50px;
-    padding: 20px;
-    max-width: 300px;
+    padding: 20px 40px;
+    
+    
    
 
 }
@@ -40,7 +41,6 @@ body{
 .start-button{
     width: 100px;
     height: 300px;
-    margin-right: 5px !important;
     background-color: rgb(74, 243, 116);
     margin: 20px;
 } 
@@ -50,10 +50,9 @@ body{
 
 .start-both-button{
     width: 60px;
-    height: 300px;
-    margin-top: 0px !important;
-    margin-right: -10px !important;
-    background-color: rgb(74, 243, 116);
+    height: 400px;
+    margin: 20px;
+    background-color: rgb(20, 224, 82);
 }
 
 button{
@@ -67,29 +66,29 @@ button{
 
 .watch-title{
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     margin-bottom: 10px;
     margin-top: -10px;
     color: white ;
 }
 
 .disp{
-    width:40px;
-    height: 55px; 
+    width:50px;
+    height: 70px; 
     border: 3px solid white;
     display: inline-block;
     margin:0px 5px;
     text-align: center;
-    font-size: 20px;
+    font-size: 40px;
     border-radius: 15px;
 }
 
 .nums{
-    margin-top: 15px;
+    margin-top: 12px;
 }
 .dot-container{
     display: inline-block;
-    margin-top:-100px;
+    
     font-size: 30px;
     
     
@@ -97,19 +96,30 @@ button{
 
 
 
-.text-container{
-    
-}
-
 .text{
     display: inline-block;
-    font-size: 15px; 
+    font-size: 20px; 
     color: #ffffff; 
-    
+    margin-top: 10px; 
+    margin-bottom: 10px;
+   
+}
+.text-hour{
+    margin-left: 10px;
+}
+
+.text-min{
+    margin-left: 43px;
+}
+.text-sec{
+    margin-left: 50px;
+}
+.text-ms{
+    margin-left: 50px;
 }
 
 .reset{
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(211, 212, 195);
 }
 .reset:hover{
     background-color:rgb(184, 182, 182)  !important
@@ -119,14 +129,15 @@ button{
     text-align: center;
 }
 .counting{
-    width: 100px;
+    width: 150px;
     height: 60px; 
     margin-top: 
     30px;
     font-size: 15px;
     border-radius: 10px;
+    background-color: rgb(211, 212, 195)
    
 }
 .counting:hover{
-    background-color: rgb(197, 197, 197)
+    background-color: rgb(182, 179, 179)
 }
